[package]
name = "db_storage_poc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.17", features = ["derive"] }
fake = { version = "2.5", features = ["derive", "uuid", "random_color", "time", "chrono", "rust_decimal"] }
rust_decimal = { version = "1.26.1", features = ["serde-bincode"] }
uuid = { version = "1.1.2", features = ["v4", "js", "serde"] }
